--- a/Style.css
+++ b/Style.css
@@ -5,3 +5,16 @@ h1{
   color: navy;
   margin-left: 20px;
 }
+.btn{
+  background-color: red;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+.btn:hover{
+  background-color: green;
+}
